[gd_scene load_steps=2 format=3 uid="uid://dilwnf4nsnn6g"]

[ext_resource type="Script" path="res://scripts/network_setup.gd" id="1_ehw8i"]

[node name="NetworkTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ehw8i")

[node name="HostButton" type="Button" parent="."]
layout_mode = 0
offset_right = 44.0
offset_bottom = 24.0
text = "Host Game
"

[node name="JoinButton" type="Button" parent="."]
layout_mode = 0
offset_left = 155.0
offset_right = 242.0
offset_bottom = 31.0
text = "Join Game
"

[node name="SoloButton" type="Button" parent="."]
layout_mode = 0
offset_left = 323.0
offset_right = 419.0
offset_bottom = 31.0
text = "Solo Game
"

[node name="Console" type="RichTextLabel" parent="."]
layout_mode = 0
offset_top = 76.0
offset_right = 740.0
offset_bottom = 340.0

[node name="IPEdit" type="TextEdit" parent="."]
custom_minimum_size = Vector2(128, 36)
layout_mode = 0
offset_top = 40.0
offset_right = 128.0
offset_bottom = 72.0
text = "127.0.0.1"
placeholder_text = "IP ADRESS"

[node name="PortEdit" type="TextEdit" parent="."]
custom_minimum_size = Vector2(128, 36)
layout_mode = 0
offset_left = 132.0
offset_top = 40.0
offset_right = 260.0
offset_bottom = 76.0
text = "31400"
placeholder_text = "PORT"

[connection signal="pressed" from="HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="SoloButton" to="." method="_on_solo_button_pressed"]
